<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/gray"
    android:paddingTop="10dp">


    <TextView
        android:id="@+id/title_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_battery"
        android:background="@drawable/text_background"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/val_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        android:textColor="@color/lightBlue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_battery" />

    <TextView
        android:id="@+id/unit_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="100dp"
        android:text="@string/unit_percent"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_battery" />

    <TextView
        android:id="@+id/title_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/title_speed"
        android:textColor="#000000"
        android:background="@drawable/text_background"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/vertical_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_battery" />

    <TextView
        android:id="@+id/val_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        android:textColor="@color/lightBlue"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/unit_speed"
        app:layout_constraintEnd_toStartOf="@+id/vertical_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_speed" />

    <TextView
        android:id="@+id/unit_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/unit_kmh"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/vertical_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_speed" />

    <TextView
        android:id="@+id/title_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/title_temp"
        android:background="@drawable/text_background"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_line"
        app:layout_constraintTop_toBottomOf="@+id/img_battery" />

    <ProgressBar
        android:id="@+id/temp_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_line"
        app:layout_constraintTop_toBottomOf="@+id/title_temp" />

    <TextView
        android:id="@+id/unit_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/unit_celcius"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_line"
        app:layout_constraintTop_toBottomOf="@+id/title_temp" />

    <TextView
        android:id="@+id/val_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        android:textColor="@color/lightBlue"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/unit_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_line"
        app:layout_constraintTop_toBottomOf="@+id/title_temp" />

    <ProgressBar
        android:id="@+id/battery_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_battery"
        app:layout_constraintEnd_toEndOf="@+id/img_battery"
        app:layout_constraintStart_toStartOf="@+id/img_battery"
        app:layout_constraintTop_toTopOf="@+id/img_battery" />

    <ProgressBar
        android:id="@+id/speed_Bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toStartOf="@+id/vertical_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_speed" />

    <ImageView
        android:id="@+id/img_battery"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/battery_disconnected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_battery" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>